Começando de vdd

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 <meta http-equiv="refresh" content="5">
 <title>laaalk</title>
 </head>
+<header> <a href="https://www.youtube.com/channel/UCHwpsjuP5hMd3c1j3HALifQ/featured">Sobre o CK</a> 
+<a href="FiltroDeCuriosidades.html"> Fitro de Curiosidades</a></header>
 <body>
     <div>
         </h1>
