sera que ta indo?

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -12,10 +12,11 @@
 <meta name="author" content="Kalel">
 <meta name="keywords" content="Curiosidades, livros, filmes, puzzles.">
 <meta http-equiv="refresh" content="5">
-<title>laaalk</title>
 </head>
-<header> <a href="https://www.youtube.com/channel/UCHwpsjuP5hMd3c1j3HALifQ/featured">Sobre o CK</a> 
-<a href="FiltroDeCuriosidades.html"> Fitro de Curiosidades</a></header>
+<header> 
+    <img src="\imgs\imglogo1.png" alt="logo">
+    <a href="https://www.youtube.com/channel/UCHwpsjuP5hMd3c1j3HALifQ/featured">CK no youtube</a> 
+<a href="SobreoCK.html">Sobre Curiosidades Kalel</a></header>
 <body>
     <div>
         </h1>
