--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="">
+<link rel="stylesheet" href="../CSS/estilo1.css">
 <meta charset="UTF-8">
 
 <meta name="viewport" content="width-device-width, initial-scale-1.0">
@@ -12,14 +12,17 @@
 <meta name="author" content="Kalel">
 <meta name="keywords" content="Curiosidades, livros, filmes, puzzles.">
 <meta http-equiv="refresh" content="5">
-</head>
+
 <header> 
-    <img src="\imgs\imglogo1.png" alt="logo">
-    <a href="https://www.youtube.com/channel/UCHwpsjuP5hMd3c1j3HALifQ/featured">CK no youtube</a> 
-<a href="SobreoCK.html">Sobre Curiosidades Kalel</a></header>
-<body>
-    <div>
-        </h1>
-    </div>
-</body>
-</html>
+    <div class="header"> <img src="../imgs/imglogo1.png" width="25" height="25">
+
+        <a href="https://www.youtube.com/channel/UCHwpsjuP5hMd3c1j3HALifQ/featured" class="YT">CK no youtube</a> 
+    <a href="SobreoCK.html">Sobre Curiosidades Kalel</a></div></header>
+
+    <body>
+        <div>
+            
+    
+        </div>
+    </body>
+    </html>
