ahhhhh alguma hora  vai ter que dar certo

--- a/HTML/SobreoCK.html
+++ b/HTML/SobreoCK.html
@@ -4,7 +4,7 @@
     <body>
         <div>
          <h1>Sobre o Curiosidades Kalel</h1>   
-         <h5>Comecei apenas como um canal no yt para vincular vídeos particulares longos demais para colocar no whatzap, o tempo <br>
+         <h5>Comecei apenas como um canal no yt para vincular vídeos particulares longos demais para colocar no whatsapp, o tempo <br>
              foi passando e tive a ideia de começar um canal para valer, postando vídeos periodicamente e tudo mais, agora que já <br>
             consegui meus certificados em programação estou fazendo este site! Em vínculo com o canal,espero que você que está lendo <br>
         isto agora, goste do canal e do site. Divirta-se com as curiosidades, elas são de todos! </h5>
