mano o projeto ta andando!

--- a/HTML/SobreoCK.html
+++ b/HTML/SobreoCK.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head></head>
+<head> <link rel="stylesheet" href="..estilos/estilo3.css"></head>
     <body>
         <div>
          <h1>Sobre o Curiosidades Kalel</h1>   
