--- a/HTML/index.html
+++ b/HTML/index.html
@@ -17,7 +17,7 @@
 
             <div class="header">
                 <img src="../imgs/imglogo1.png" width="50" height="50" class="img1">
-                <a href="esta_curioso" class="curioso"> Está curioso?</a>
+                <a href="esta_curioso.html" class="curioso"> Está curioso?</a>
            
                    <a href="https://www.youtube.com/channel/UCHwpsjuP5hMd3c1j3HALifQ/featured" class="YT">CK no youtube</a> 
                <a href="SobreoCK.html" class="sobreock">Sobre Curiosidades Kalel</a>
