--- a/HTML/SobreoCK.html
+++ b/HTML/SobreoCK.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
-<head> <link rel="stylesheet" href="..estilos/estilo3.css"></head>
+<head> <link rel="stylesheet" href="..estilos/estilo3.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">"></head>
     <body>
-        <div>
+        <div class="container-fluid">
          <h1>Sobre o Curiosidades Kalel</h1>   
          <h5>Comecei apenas como um canal no yt para vincular vídeos particulares longos demais para colocar no whatsapp, o tempo <br>
              foi passando e tive a ideia de começar um canal para valer, postando vídeos periodicamente e tudo mais, agora que já <br>
             consegui meus certificados em programação estou fazendo este site! Em vínculo com o canal,espero que você que está lendo <br>
         isto agora, goste do canal e do site. Divirta-se com as curiosidades, elas são de todos! </h5>
+        <button class="btn-success">teste</button>
     
         </div>
     </body>
