--- a/HTML/SobreoCK.html
+++ b/HTML/SobreoCK.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head> <link rel="stylesheet" href="..estilos/estilo3.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">"></head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"></head>
     <body>
         <div class="container-fluid">
          <h1>Sobre o Curiosidades Kalel</h1>   
