--- a/HTML/index.html
+++ b/HTML/index.html
@@ -25,6 +25,13 @@
                <a href="SobreoCK.html" class="sobreock">Sobre Curiosidades Kalel</a>
             </div>
             </div>
+            <div class="card m-2">
+                <div class="card-body">
+                    <h1>O que é uma curiosidade?</h1>
+                    <h5>Aqui você descubrirá!</h5>
+                    <img class= "card-img-top"src="../imgs/oqueecuriosidade.jpg"> 
+                </div>
+            </div>
 
             
             
