--- a/HTML/oqecuriosidade.html
+++ b/HTML/oqecuriosidade.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link href="..estilos/estilo4.css" rel="stylesheet">
+    <link href="..estilos/oqecuriosidade.css" rel="stylesheet">
  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <meta charset="UTF-8">
 
@@ -15,5 +15,9 @@
 <meta http-equiv="refresh" content="5">
 </head>
 <body>
-    
+    <div class="container-fluid">
+        <h1> O que é uma Curiosidade?</h1>
+        <img src="../imgs/oqueecuriosidade.jpg" width="400px" height="300px" alt="oqueecuriosidade">
+
+    </div>
 </body>
