--- a/HTML/SobreoCK.html
+++ b/HTML/SobreoCK.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head> <link rel="stylesheet" href="..estilos/estilo3.css">
+<head> <link rel="stylesheet" href="..estilos/sobreoCK.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"></head>
     <body>
         <div class="container-fluid">
@@ -9,8 +9,9 @@
              foi passando e tive a ideia de começar um canal para valer, postando vídeos periodicamente e tudo mais, agora que já <br>
             consegui meus certificados em programação estou fazendo este site! Em vínculo com o canal,espero que você que está lendo <br>
         isto agora, goste do canal e do site. Divirta-se com as curiosidades, elas são de todos! </h5>
-        <button class="btn-success">teste</button>
-    
+        </div>
+        <div class="img">
+            <img src="../imgs/imglogo1.png" width="150" height="150" class="img1">
         </div>
     </body>
     </html>
