--- a/HTML/esta_curioso.html
+++ b/HTML/esta_curioso.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="..estilos/estilo2.css">
+    <link rel="stylesheet" href="..estilos/estacurioso.css">
     <meta charset="UTF-8">
 </head>
 <body>
