--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link href="..estilos/estilo.css" rel="stylesheet">
+    <link href="..estilos/index.css" rel="stylesheet">
  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <meta charset="UTF-8">
 
@@ -27,7 +27,9 @@
             </div>
             <div class="cards">
                 <div class="card m-2">
+                    <img class="card-img-top" src="../imgs/oqueecuriosidade.jpg" alt="oqueecuriosidade">
                     <h1><a href="oqecuriosidade.html">O que é uma Curiosidade?</a></h1>
+
                 </div>
             <div class="card m-2"> 
                 <h1><a href="distapren.html"> Distúrbios de aprendizagem</a></h1>
