--- a/HTML/oqecuriosidade.html
+++ b/HTML/oqecuriosidade.html
@@ -18,6 +18,16 @@
     <div class="container-fluid">
         <h1> O que é uma Curiosidade?</h1>
         <img src="../imgs/oqueecuriosidade.jpg" width="500px" height="300px" alt="oqueecuriosidade">
+         <h5>     Muitas pessoas já ficaram curiosas, até você que está lendo meu primeiro "artigo", está <br> 
+             curioso para saber o que é uma curiosidade. Parece meio redundante, mas aposto que você nunca <br> 
+             se perguntou pelo menos uma vez o que é uma curiosidade. <br>
+                 Antes de mais nada é preciso procurar a informação no nosso amigo dicionário, no dicionário <br>
+                 <a href="https://www.google.com.br/search?q=dicion%C3%A1rio&sxsrf=ALiCzsb1f4PGzPRMsPmYxxX_pzDR30NILQ%3A1651492199230&source=hp&ei=Z8VvYrzADKfc5OUPw6mDyAQ&iflsig=AJiK0e8AAAAAYm_Td5Qb-WCb3wKLr8mTiq8d6GfiMz1O&oq=dicio&gs_lcp=Cgdnd3Mtd2l6EAMYADIECCMQJzIKCAAQsQMQgwEQQzIECAAQAzIKCAAQsQMQgwEQQzIICAAQgAQQsQMyCAgAEIAEELEDMgQIABBDMgcIABCxAxBDMggIABCABBCxAzILCAAQgAQQsQMQgwE6CAgAELEDEIMBOgUIABCABDoLCC4QgAQQxwEQowI6EQguEIAEELEDEIMBEMcBENEDUABYgQdgiBFoAHAAeACAAbABiAHyBZIBAzAuNZgBAKABAQ&sclient=gws-wiz">
+                     Oxford Languages 
+                 </a>
+                 a definição de curiosidade é característica ou qualidade de curioso. 
+                 Ou desejo intenso de ver, ouvir, conhecer, experimentar algo geralmente novo, original, desconhecido
 
+         </h5>
     </div>
 </body>
