--- a/HTML/oqecuriosidade.html
+++ b/HTML/oqecuriosidade.html
@@ -19,14 +19,20 @@
         <h1> O que é uma Curiosidade?</h1>
         <img src="../imgs/oqueecuriosidade.jpg" width="500px" height="300px" alt="oqueecuriosidade">
          <h5>     Muitas pessoas já ficaram curiosas, até você que está lendo meu primeiro "artigo", está <br> 
-             curioso para saber o que é uma curiosidade. Parece meio redundante, mas aposto que você nunca <br> 
+             curioso para saber o que é uma curiosidade. Parece meio redundante, mas aposto que você já<br> 
              se perguntou pelo menos uma vez o que é uma curiosidade. <br>
                  Antes de mais nada é preciso procurar a informação no nosso amigo dicionário, no dicionário <br>
                  <a href="https://www.google.com.br/search?q=dicion%C3%A1rio&sxsrf=ALiCzsb1f4PGzPRMsPmYxxX_pzDR30NILQ%3A1651492199230&source=hp&ei=Z8VvYrzADKfc5OUPw6mDyAQ&iflsig=AJiK0e8AAAAAYm_Td5Qb-WCb3wKLr8mTiq8d6GfiMz1O&oq=dicio&gs_lcp=Cgdnd3Mtd2l6EAMYADIECCMQJzIKCAAQsQMQgwEQQzIECAAQAzIKCAAQsQMQgwEQQzIICAAQgAQQsQMyCAgAEIAEELEDMgQIABBDMgcIABCxAxBDMggIABCABBCxAzILCAAQgAQQsQMQgwE6CAgAELEDEIMBOgUIABCABDoLCC4QgAQQxwEQowI6EQguEIAEELEDEIMBEMcBENEDUABYgQdgiBFoAHAAeACAAbABiAHyBZIBAzAuNZgBAKABAQ&sclient=gws-wiz">
                      Oxford Languages 
                  </a>
                  a definição de curiosidade é característica ou qualidade de curioso. 
-                 Ou desejo intenso de ver, ouvir, conhecer, experimentar algo geralmente novo, original, desconhecido
+                 Ou desejo intenso de ver, ouvir, conhecer, experimentar algo geralmente novo, original, desconhecido.
+                 Mas isso é só uma definição, o que nós queremos aqui é investigar as coisas a fundo, afinal, eu não vim aqui só para
+                 trazer  uma definição de dicionário, eu vim aqui para fazer mais. Bom, para começar nossa viagem no mundo da ciência 
+                 vamos voltar bastante no tempo, lá para a Grécia Antiga, vamos falar com nosso amigo Sócrates. Ao investigar os fenômenos
+                 sociais e naturais, Sócrates chegou a frase : "Só sei que nada sei", e por incrível que pareça, esta frase tem tudo a ver
+                 com o assunto de hoje. 
+                 <img src="../imgs/socrates-um-dos-principais-nomes-filosofia-5b1e925991192.png" alt="">
 
          </h5>
     </div>
