--- a/HTML/oqecuriosidade.html
+++ b/HTML/oqecuriosidade.html
@@ -32,7 +32,9 @@
                  vamos voltar bastante no tempo, lá para a Grécia Antiga, vamos falar com nosso amigo Sócrates. Ao investigar os fenômenos
                  sociais e naturais, Sócrates chegou a frase : "Só sei que nada sei", e por incrível que pareça, esta frase tem tudo a ver
                  com o assunto de hoje. 
-                 <img src="../imgs/socrates-um-dos-principais-nomes-filosofia-5b1e925991192.png" alt="">
+                 <img src="../imgs/socrates-um-dos-principais-nomes-filosofia-5b1e925991192.png" alt=""> <br>
+                    A começar pela própria intepretação e o contexto da frase, o que você  acha que Sócrates 
+                    quis dizer com essa frase? Comente no final do site 
 
          </h5>
     </div>
