terminei o q e uma curio

--- a/HTML/oqecuriosidade.html
+++ b/HTML/oqecuriosidade.html
@@ -12,7 +12,6 @@
 <meta name="application-name" content="Curiosidades Kalel">
 <meta name="author" content="Kalel">
 <meta name="keywords" content="Curiosidades, livros, filmes, puzzles.">
-<meta http-equiv="refresh" content="5">
 </head>
 <body>
     <div class="container-fluid">
@@ -33,9 +32,19 @@
                  sociais e naturais, Sócrates chegou a frase : "Só sei que nada sei", e por incrível que pareça, esta frase tem tudo a ver
                  com o assunto de hoje. 
                  <img src="../imgs/socrates-um-dos-principais-nomes-filosofia-5b1e925991192.png" alt=""> <br>
-                    A começar pela própria intepretação e o contexto da frase, o que você  acha que Sócrates 
-                    quis dizer com essa frase? Comente no final do site 
-
+                    A começar pela própria intepretação e o contexto da frase. E você, o que acha que Sócrates
+                    quis dizer com esta frase? Comente!
+                    Bom, pense comigo: vamos levantar a hipótese de um cientista chamado Joãozinho, ele é um
+                    cara muito esperto, já fez diversas descobertas importantes para a ciência, e um certo dia 
+                    ele resolve parar, pois acha que já sabe tudo, não há mais nada de importante para descobrir. 
+                    Quando ele para, ele deixa de evoluir, e foi isso que Sócrates quis nos ensinar, todos os dias 
+                    sempre temos que repetir esse mantra em nossa mente, para não sermos ignorantes. 
+                    Se você gostou deste primeiro texto, tenho dois vídeos em meu canal, que falam especialmente disso! <br>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/_eSCD5-zjUA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/x9efuIKvwYc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <br><input id="emailinput" type="text" placeholder=" Seu email">
+                    <input id="nameinput" type="text" placeholder="Seu nome" >
+                    <input id="commitinput" type="text" placeholder="Seu comentário">
          </h5>
     </div>
 </body>
