--- a/HTML/oqecuriosidade.html
+++ b/HTML/oqecuriosidade.html
@@ -42,9 +42,15 @@
                     Se você gostou deste primeiro texto, tenho dois vídeos em meu canal, que falam especialmente disso! <br>
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/_eSCD5-zjUA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/x9efuIKvwYc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    <br><input id="emailinput" type="text" placeholder=" Seu email">
-                    <input id="nameinput" type="text" placeholder="Seu nome" >
+                    <br><input id="emailinput" type="text" placeholder="Seu email">
+                    <input id="nameinput" type="text" placeholder="Seu nome">
                     <input id="commitinput" type="text" placeholder="Seu comentário">
+                    <button onclick="register()">Registrar comentário</button>
          </h5>
+        <h4 id="username"></h4>
+        <h5 id="useremail"></h5>
+        <h5 id="usercommit"></h5>
     </div>
+<script src="/JS/oqecuriosidade.js"></script>
 </body>
+</html>
