input comentário quase pronto

--- a/HTML/oqecuriosidade.html
+++ b/HTML/oqecuriosidade.html
@@ -44,13 +44,14 @@
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/x9efuIKvwYc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <br><input id="emailinput" type="text" placeholder="Seu email">
                     <input id="nameinput" type="text" placeholder="Seu nome">
-                    <input id="commitinput" type="text" placeholder="Seu comentário">
-                    <button onclick="register()">Registrar comentário</button>
+                    <br><textarea placeholder="Seu comentário" name="Seu comentário" id="commitinput" cols="30" rows="10"></textarea>
+                    <br><button onclick="register()">Registrar comentário</button>
+                  
          </h5>
-        <h4 id="username"></h4>
-        <h5 id="useremail"></h5>
+        <h3 id="username"></h3>
+        <h4 id="useremail"></h4>
         <h5 id="usercommit"></h5>
     </div>
-<script src="/JS/oqecuriosidade.js"></script>
+    <script src="JS/oqecuriosidade.js"></script>
 </body>
 </html>
