--- a/HTML/distapren.html
+++ b/HTML/distapren.html
@@ -12,5 +12,7 @@
 <meta name="application-name" content="Curiosidades Kalel">
 <meta name="author" content="Kalel">
 <meta name="keywords" content="Curiosidades, livros, filmes, puzzles.">
-<meta http-equiv="refresh" content="5">
 </head>
+<body>
+    
+</body>
